# embedding-cpu-optimization-test

./: .gitignore  LICENSE.txt  README.md  optimize.sh  pyproject.toml  pyproject.toml.bak  quantize_log.txt
src/embedding_cpu_optimization/: __about__.py  __init__.py  ipex.py  quantize.py  run_quantized_model.py
src/embedding_cpu_optimization/nc_workspace/2024-07-02_18-17-35/: deploy.yaml  history.snapshot
